# Auto-Dice-Roller

./: CMakeLists.txt  README.md
apps/: main.cpp
include/auto_dice_roller/: helloworld.hpp
src/: CMakeLists.txt  helloworld.cpp
